[package]
name = "object_store"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
ceresdbproto = { workspace = true }
chrono = { workspace = true }
clru = { workspace = true }
common_util = { workspace = true }
crc = "3.0.0"
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
prometheus = { workspace = true }
prometheus-static-metric = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
upstream = { package="object_store", features = [ "aws" ], git = "https://github.com/MachaelLee/arrow-rs.git", rev = "3620e92a398fcb1073b46dfc288d46ab7b643d26" }

[dev-dependencies]
tempfile = { workspace = true }
