[package]
name = "table_kv"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
common_util = { workspace = true }
log = { workspace = true }
obkv-table-client-rs = { git = "https://github.com/MachaelLee/obkv-table-client-rs.git", rev = "16f980ab0bb0bd5d703cb0571947699cecab7a83" }
serde = { workspace = true }

snafu = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
