[package]
name = "table_kv"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
common_util = { workspace = true }
log = { workspace = true }
obkv-table-client-rs = { git = "https://github.com/MachaelLee/obkv-table-client-rs.git", rev = "6980f4372915849d05b6e30367358bd34b7eb616" }
serde = { workspace = true }

snafu = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
